[gd_scene load_steps=5 format=3 uid="uid://qmr0eop7dlly"]

[ext_resource type="Script" path="res://scenes/puzzle.gd" id="1_equgf"]
[ext_resource type="PackedScene" uid="uid://dw0poptp44xgr" path="res://scenes/puzzle_tile.tscn" id="1_p6nee"]

[sub_resource type="BoxMesh" id="BoxMesh_5pgm7"]
size = Vector3(0.9, 0.1, 0.9)

[sub_resource type="MeshLibrary" id="MeshLibrary_g8yei"]
item/0/name = "grid"
item/0/mesh = SubResource("BoxMesh_5pgm7")
item/0/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
item/0/shapes = []
item/0/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/0/navigation_layers = 1

[node name="puzzle" type="Node3D"]
script = ExtResource("1_equgf")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 2, 3, 5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="puzzle_tile" parent="." instance=ExtResource("1_p6nee")]
input_capture_on_drag = false

[node name="puzzle_tile2" parent="." instance=ExtResource("1_p6nee")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3)
pos = Vector2i(3, 3)

[node name="puzzle_tile3" parent="." instance=ExtResource("1_p6nee")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
pos = Vector2i(0, 3)

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -0.5)
mesh_library = SubResource("MeshLibrary_g8yei")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 3, 1, 0, 2, 1, 0, 1, 1, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 1, 3, 0, 1, 2, 0, 2, 2, 0, 2, 3, 0, 3, 3, 0, 3, 2, 0)
}
